@@ -107,21 +107,6 @@ if test -z "$APXS"; then
   else
     AC_MSG_RESULT(no)
   fi
-else
-  if test -z "$APRCONFIG" ; then
-    APRCONFIG=`dirname ${APXS}`/apr-config
-  fi
-fi
-
-if test -z "$APRCONFIG"; then
-  AC_MSG_CHECKING(for apr-config in /usr/local/apache/sbin)
-  if test -x /usr/local/apache/sbin/apr-config; then
-    APRCONFIG=/usr/local/apache/sbin/apr-config
-    AC_MSG_RESULT([found, we'll use this. Use --with-apr-config to specify another.])    
-  else
-    AC_MSG_RESULT(no)
-    APRCONFIG=""
-  fi
 fi
 
 if test -z "$APXS"; then
@@ -144,17 +129,6 @@ if test -z "$APXS"; then
   fi
 fi
 
-if test -z "$APRCONFIG"; then
-  AC_MSG_CHECKING(for apr-config in /usr/local/apache2/bin)
-  if test -x /usr/local/apache2/bin/apr-config; then
-    APRCONFIG=/usr/local/apache2/bin/apr-config
-    AC_MSG_RESULT([found, we'll use this. Use --with-apr-config to specify another.])
-  else
-    AC_MSG_RESULT(no)
-    APRCONFIG=""
-  fi
-fi
-
 if test -z "$APXS"; then
   AC_MSG_CHECKING(for apxs2 in /usr/sbin)
   if test -x /usr/sbin/apxs2; then
@@ -174,18 +148,6 @@ if test -z "$APXS"; then
     AC_MSG_RESULT(no)
   fi
 fi
-
-if test -z "$APRCONFIG"; then
-  AC_MSG_CHECKING(for apr-config in /usr/sbin)
-  if test -x /usr/sbin/apr-config; then
-    APRCONFIG=/usr/sbin/apr-config
-    AC_MSG_RESULT([found, we'll use this. Use --with-apr-config to specify another.])
-  else
-    AC_MSG_RESULT(no)
-    APRCONFIG=""
-  fi
-fi
-
 # last resort
 if test -z "$APXS"; then
   AC_PATH_PROG(APXS, apxs2)
@@ -197,10 +159,6 @@ fi
 
 if test -z "$APXS"; then
   AC_MSG_ERROR([**** apxs was not found, DSO compilation will not be available.])
-fi
-
-if test -z "$APRCONFIG"; then
-  AC_PATH_PROG(APRCONFIG, apr-config)
 fi
 
 # determine LIBEXEC
@@ -220,7 +178,7 @@ CFLAGS="$CFLAGS $AP_INCLUDES"
 
 AC_MSG_CHECKING([Apache version])
 AC_TRY_COMPILE([
-	#include <httpd.h>
+	#include <ap_release.h>
 ], [
 	char *version = AP_SERVER_BASEREVISION;
 ], [
@@ -240,9 +198,74 @@ if test "$APACHE_VER" = "1.3" ; then
 	], [
 		APACHE_VER=retry
 	])
+else
+AC_TRY_RUN([
+	#include <ap_release.h>
+	int main ()
+	{
+		return (AP_SERVER_MAJORVERSION_NUMBER == 2 && AP_SERVER_MINORVERSION_NUMBER == 2) ? 0 : 1;
+	}
+], [
+	APACHE_VER=2.2
+	APRCONFIG_NAME=apr-1-config
+], [
+	APRCONFIG_NAME=apr-config
+])
+
 fi
 
-# Try apr-config
+if test ! "$APACHE_VER" = "1.3" -a ! "$APACHE_VER" = "retry" ; then
+	AC_MSG_RESULT(${APACHE_VER})
+fi
+if test ! "$APACHE_VER" = "1.3" -a -z "$APRCONFIG" ; then
+   A_DIR=`dirname ${APXS}`
+   AC_MSG_CHECKING(for ${APRCONFIG_NAME} in ${A_DIR})
+   APRCONFIG=`dirname ${APXS}`/${APRCONFIG_NAME}
+   if test -x $APRCONFIG ; then
+      AC_MSG_RESULT([found. We'll use this. Use --with-apr-config to specify another.])
+   else
+      AC_MSG_RESULT(no)
+   fi
+fi
+
+if test ! "$APACHE_VER" = "1.3" -a -z "$APRCONFIG"; then
+  AC_MSG_CHECKING(for ${APRCONFIG_NAME} in /usr/local/apache/sbin)
+  if test -x /usr/local/apache/sbin/${APRCONFIG_NAME}; then
+    APRCONFIG=/usr/local/apache/sbin/${APRCONFIG_NAME}
+    AC_MSG_RESULT([found, we'll use this. Use --with-apr-config to specify another.])    
+  else
+    AC_MSG_RESULT(no)
+    APRCONFIG=""
+  fi
+fi
+
+if test ! "$APACHE_VER" = "1.3" -a -z "$APRCONFIG"; then
+  AC_MSG_CHECKING(for ${APRCONFIG_NAME} in /usr/local/apache2/bin)
+  if test -x /usr/local/apache2/bin/${APRCONFIG_NAME}; then
+    APRCONFIG=/usr/local/apache2/bin/${APRCONFIG_NAME}
+    AC_MSG_RESULT([found, we'll use this. Use --with-apr-config to specify another.])
+  else
+    AC_MSG_RESULT(no)
+    APRCONFIG=""
+  fi
+fi
+
+if test ! "$APACHE_VER" = "1.3" -a -z "$APRCONFIG"; then
+  AC_MSG_CHECKING(for ${APRCONFIG_NAME} in /usr/sbin)
+  if test -x /usr/sbin/${APRCONFIG_NAME}; then
+    APRCONFIG=/usr/sbin/${APRCONFIG_NAME}
+    AC_MSG_RESULT([found, we'll use this. Use --with-apr-config to specify another.])
+  else
+    AC_MSG_RESULT(no)
+    APRCONFIG=""
+  fi
+fi
+
+if test ! "$APACHE_VER" = "1.3" -a -z "$APRCONFIG"; then
+  AC_PATH_PROG(APRCONFIG, ${APRCONFIG_NAME})
+fi
+
+# Try apr-config, probably 1.3
 if test "$APACHE_VER" = "retry" -a -x "$APRCONFIG"; then
 	CFLAGS="$CFLAGS `$APRCONFIG --includes`"
 	AC_TRY_COMPILE([
@@ -262,10 +285,8 @@ fi
 
 if test "$APACHE_VER" = "1.3"; then
 	CFLAGS="$CFLAGS -DAPACHE13 -DEAPI"
+	AC_MSG_RESULT($APACHE_VER)
 fi
-
-AC_MSG_RESULT($APACHE_VER)
-
 
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
 if test "x$PKG_CONFIG" = "xno"; then
@@ -285,10 +306,14 @@ AC_ARG_WITH(crosspkgdir, [  --with-crosspkgdir=/path/to/pkg-config/dir],
         fi
 )
 
-AM_CONDITIONAL(APACHE2, test "$APACHE_VER" = "2.0")
-if test "$APACHE_VER" = "2.0" ; then
+AM_CONDITIONAL(APACHE2, test ! "$APACHE_VER" = "1.3")
+if test ! "$APACHE_VER" = "1.3" ; then
 dnl Sources are recompiled if we change the target version
-	AC_DEFINE([APACHE2],,[Compiling for Apache 2.0])
+	AC_DEFINE([APACHE2],,[Compiling for Apache >= 2.0 ])
+fi
+
+if test "$APACHE_VER" = "2.2" ; then
+	AC_DEFINE([APACHE22],,[Compiling for Apache >= 2.2 ])
 fi
 
 # check for --with-mono-default-config-dir
@@ -307,10 +332,16 @@ AC_ARG_WITH(mono-default-config-dir,
 ],
 AC_MSG_RESULT($DFLT_MONO_CONFIG_DIR))
 
-found_apr_socket_connect=no
-AC_CHECK_LIB(apr-0, apr_socket_connect, found_apr_socket_connect=yes)
-if test "x$found_apr_socket_connect" = "xyes" ; then
-	AC_DEFINE([HAVE_APR_SOCKET_CONNECT],,[apr_socket_connect is present])
+if test ! "$APACHE_VER" = "1.3" ; then
+   found_apr_socket_connect=yes
+   AC_DEFINE([HAVE_APR_SOCKET_CONNECT],,[apr_socket_connect is present])
+else
+   found_apr_socket_connect=no
+   AC_CHECK_LIB(apr-0, apr_socket_connect, found_apr_socket_connect=yes)
+   if test "x$found_apr_socket_connect" = "xyes" ; then
+      AC_DEFINE([HAVE_APR_SOCKET_CONNECT],,[apr_socket_connect is present])
+   fi
+
 fi
 
 MONO_PREFIX=`$PKG_CONFIG --silence-errors --variable=prefix mono`
@@ -370,7 +401,7 @@ echo "   * Apache version = $APACHE_VER"
 echo "   * Apache modules directory = $APXS_LIBEXECDIR"
 test -x "$APXS" && \
 echo "   * apxs = $APXS"
-test "$APACHE_VER" = "2.0" -a -x "$APRCONFIG" && \
+test ! "$APACHE_VER" = "1.3" -a -x "$APRCONFIG" && \
 echo "   * apr-config = $APRCONFIG"
 echo "   * Verbose logging (debug) = $enable_debug"
 echo "   * mono prefix = $MONO_PREFIX"
