@@ -1,5 +1,10 @@
 2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* configure.in:
+	* src/mod_mono.[ch]: now apache 2.2 is supported.
+
+2005-12-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* src/mod_mono.c: patch by Dean Brettle that fixes chunked encoding
 	support.
 
